--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     </div>
 
                     <div class="flex-1">
-                        <img src="/images//slider/bike1.png" class="w-[400px]" />
+                        <img src="./images//slider/bike1.png" class="w-[400px]" />
                     </div>
                 </div>
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -116,7 +116,7 @@
                     </div>
 
                     <div class="flex-1">
-                        <img src="/images//slider/bike2.png" class="w-[400px]" />
+                        <img src="./images//slider/bike2.png" class="w-[400px]" />
                     </div>
                 </div>
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -139,7 +139,7 @@
                     </div>
 
                     <div class="flex-1">
-                        <img src="/images//slider/bike3.png" class="w-[400px]" />
+                        <img src="./images//slider/bike3.png" class="w-[400px]" />
                     </div>
                 </div>
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -162,7 +162,7 @@
                     </div>
 
                     <div class="flex-1">
-                        <img src="/images//slider/bike4.png" class="w-[400px]" />
+                        <img src="./images//slider/bike4.png" class="w-[400px]" />
                     </div>
                 </div>
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -182,7 +182,7 @@
             <div class="grid gap-5 grid-cols-1 md:grid-cols-2 md:grid-cols-3">
                 <!-- first card -->
                 <div class="card bg-base-100 shadow-xl">
-                    <figure><img src="/images//others/latest1.png" alt="Shoes" /></figure>
+                    <figure><img src="./images//others/latest1.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
@@ -194,7 +194,7 @@
                 </div>
                 <!-- 2nd card -->
                 <div class="card bg-base-100 shadow-xl">
-                    <figure><img src="/images//others/latest2.png" alt="Shoes" /></figure>
+                    <figure><img src="./images//others/latest2.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
@@ -206,7 +206,7 @@
                 </div>
                 <!-- 3rd card -->
                 <div class="card bg-base-100 shadow-xl">
-                    <figure><img src="/images//others/latest3.png" alt="Shoes" /></figure>
+                    <figure><img src="./images//others/latest3.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
@@ -226,7 +226,7 @@
             <div class="grid gap-10 grid-cols-1 md:-cols2 lg:grid-cols-3">
                 <!-- first review -->
                 <div class="card card-compact w-96 bg-base-100 p-9 border border-gray-400">
-                    <figure><img class="w-36" src="/images//others/user-1.png" alt="Shoes" /></figure>
+                    <figure><img class="w-36" src="./images//others/user-1.png" alt="Shoes" /></figure>
                     <div class="card-body">
 
                         <p class="">Slate helps you see how
@@ -248,7 +248,7 @@
                 </div>
                 <!-- 2nd review -->
                 <div class="card card-compact w-96 bg-base-100 p-9 border border-gray-400">
-                    <figure><img class="w-36" src="/images//others/user-2.png" alt="Shoes" /></figure>
+                    <figure><img class="w-36" src="./images//others/user-2.png" alt="Shoes" /></figure>
                     <div class="card-body">
 
                         <p class="">Slate helps you see how
@@ -270,7 +270,7 @@
                 </div>
                 <!-- 3rd review -->
                 <div class="card card-compact w-96 bg-base-100 p-9 border border-gray-400">
-                    <figure><img class="w-36" src="/images//others/user-3.png" alt="Shoes" /></figure>
+                    <figure><img class="w-36" src="./images//others/user-3.png" alt="Shoes" /></figure>
                     <div class="card-body">
 
                         <p class="">Slate helps you see how
@@ -299,7 +299,7 @@
             </h3>
             <div class="hero min-h-screen">
                 <div class="hero-content flex-col lg:gap-24 lg:flex-row">
-                    <img src="/images//others/faq.png" class="max-w-3/2 rounded-lg shadow-2xl" />
+                    <img src="./images//others/faq.png" class="max-w-3/2 rounded-lg shadow-2xl" />
                     <div>
                         <!-- first Question -->
                         <div class="collapse collapse-arrow ">
@@ -361,8 +361,8 @@
             <div>
                 <span class="footer-title">Social</span>
                 <div class="grid grid-col gap-4">
-                    <a><img class="w-36" src="images/others/ios.png" alt=""></a>
-                    <a><img class="w-36" src="images/others/android.png" alt=""></a>
+                    <a><img class="w-36" src="./images/others/ios.png" alt=""></a>
+                    <a><img class="w-36" src="./images/others/android.png" alt=""></a>
                 </div>
             </div>
         </footer>
